Criação do Middleway e conexão do banco de dados
